...
                        <view key="tableHeaderView" contentMode="scaleToFill" id="vUS-Zl-Ekj">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="260"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                            <subviews>
                                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2qG-Uf-GOs">
                                    <rect key="frame" x="364" y="10" width="30" height="30"/>
                                    <accessibility key="accessibilityConfiguration" identifier="close"/>
                                    <constraints>
                                        <constraint firstAttribute="width" secondItem="2qG-Uf-GOs" secondAttribute="height" multiplier="44:44" id="S7A-Bz-eYu"/>
                                        <constraint firstAttribute="height" constant="30" id="cqi-qA-VRK"/>
                                    </constraints>
                                    <color key="tintColor" red="0.99473684210000002" green="0.98947368420000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    <state key="normal" image="xmark">
...
